<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    >


    <TextView
        android:id="@+id/home_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:gravity="fill_vertical"
        android:text="@string/home_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_illustration_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/illustration_img"
        android:src="@drawable/home_bg2"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/home_have_key"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginBottom="10dp"
        android:text="@string/have_key"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/home_have_not_key"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/home_have_not_key"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginBottom="10dp"
        android:text="@string/havent_key"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>