<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HaveNotKeyActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/home_have_not_key_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/have_not_key_get_key"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/qr_code_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/scancode_ver"
        android:contentDescription="@string/iluss_des"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_scan"
        tools:layout_editor_absoluteX="20dp"
        />

    <Button
        android:id="@+id/btn_scan"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scan_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_have_not_key_title"
        />

    <TextView
        android:id="@+id/have_key_already_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginEnd="10dp"
        android:text="@string/have_key_already"
        app:layout_constraintTop_toBottomOf="@+id/btn_scan"
        tools:layout_editor_absoluteX="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>