<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".HaveKeyActivity">

    <TextView
        android:id="@+id/serial_title"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/serialKey_title"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/serial_key"
            style="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serial_title"
            app:startIconDrawable="@drawable/serial_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_serial_key"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/authenticate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_serial"
        app:layout_constraintBottom_toTopOf="@id/tv_have_key"
        android:text="@string/authenticate_btn_str"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_have_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serial_key_not_have"
        android:layout_marginTop="15sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/authenticate_btn"
        tools:layout_editor_absoluteX="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>